[project]
name = "pr-typo-agent"
version = "0.1.0"
description = "AI-powered PR review agent for automated code review and typo detection"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "openai>=1.3.0",
    "anthropic>=0.8.0",
    "pyspellchecker>=0.7.0",
    "requests>=2.31.0",
]

[project.scripts]
pr-review-agent = "pr_review_agent:main"

[tool.uv.workspace]
members = []
